einstellung_derive/src/trybuild_tests/invalid_item_unit_struct.stderr
error: Unsupported shape `no fields`. Expected named fields.
 --> src/trybuild_tests/invalid_item_unit_struct.rs
  |
  | #[derive(Config)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
